--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🏪 Mini Mart POS System - Point of Sale</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <h1>🏪 Mini Mart POS System</h1>
             <div class="nav-tabs">
-                <a href="index.html" class="tab-button active">💳 Point of Sale</a>
-                <a href="inventory.html" class="tab-button">📦 Inventory</a>
-                <a href="stock.html" class="tab-button">📥 Product in Stock</a>
-                <a href="reports.html" class="tab-button">📊 Reports</a>
-                <a href="settings.html" class="tab-button">⚙️ Settings</a>
+                <a href="login.html" class="tab-button active">💳 Point of Sale</a>
+                <a href="./pages/inventory.html" class="tab-button">📦 Inventory</a>
+                <a href="./pages/stock.html" class="tab-button">📥 Product in Stock</a>
+                <a href="./pages/reports.html" class="tab-button">📊 Reports</a>
+                <a href="./pages/settings.html" class="tab-button">⚙️ Settings</a>
             </div>
         </div>
 
