--- a/pages/report.html
+++ b/pages/report.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🏪 Mini Mart POS System - Reports</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="../style.css">
+    <script src="../script.js" defer></script>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <h1>🏪 Mini Mart POS System</h1>
             <div class="nav-tabs">
-                <a href="index.html" class="tab-button">💳 Point of Sale</a>
+                <a href="../index.html" class="tab-button">💳 Point of Sale</a>
                 <a href="inventory.html" class="tab-button">📦 Inventory</a>
                 <a href="stock.html" class="tab-button">📥 Product in Stock</a>
                 <a href="reports.html" class="tab-button active">📊 Reports</a>
