--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="login.html" class="tab-button active">💳 Point of Sale</a>
                 <a href="./pages/inventory.html" class="tab-button">📦 Inventory</a>
                 <a href="./pages/stock.html" class="tab-button">📥 Product in Stock</a>
-                <a href="./pages/reports.html" class="tab-button">📊 Reports</a>
+                <a href="./pages/report.html" class="tab-button">📊 Reports</a>
                 <a href="./pages/settings.html" class="tab-button">⚙️ Settings</a>
             </div>
         </div>
