--- a/pages/settings.html
+++ b/pages/settings.html
@@ -15,7 +15,7 @@
                 <a href="../index.html" class="tab-button">💳 Point of Sale</a>
                 <a href="inventory.html" class="tab-button">📦 Inventory</a>
                 <a href="stock.html" class="tab-button">📥 Product in Stock</a>
-                <a href="reports.html" class="tab-button">📊 Reports</a>
+                <a href="report.html" class="tab-button">📊 Reports</a>
                 <a href="settings.html" class="tab-button active">⚙️ Settings</a>
             </div>
         </div>
