--- a/pages/report.html
+++ b/pages/report.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🏪 Mini Mart POS System - Reports</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="../script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -15,15 +14,20 @@
                 <a href="../index.html" class="tab-button">💳 Point of Sale</a>
                 <a href="inventory.html" class="tab-button">📦 Inventory</a>
                 <a href="stock.html" class="tab-button">📥 Product in Stock</a>
-                <a href="reports.html" class="tab-button active">📊 Reports</a>
+                <a href="report.html" class="tab-button active">📊 Reports</a>
                 <a href="settings.html" class="tab-button">⚙️ Settings</a>
+                <button onclick="ApiService.logout()" class="tab-button" style="background: linear-gradient(45deg, #dc2626, #b91c1c);">🚪 Logout</button>
             </div>
         </div>
 
         <div id="reports" class="tab-content active">
+            <div style="margin-bottom: 20px; text-align: center;">
+                <button onclick="updateReports()" class="btn">🔄 Refresh Reports</button>
+            </div>
+            
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="stat-value" id="todaySales">$0</div>
+                    <div class="stat-value" id="todaySales">$0.00</div>
                     <div class="stat-label">Today's Sales</div>
                 </div>
                 <div class="stat-card">
@@ -39,23 +43,32 @@
                     <div class="stat-label">Low Stock Items</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-value" id="totalProfit">$0</div>
+                    <div class="stat-value" id="totalProfit">$0.00</div>
                     <div class="stat-label">Today's Profit</div>
                 </div>
             </div>
+            
             <h2>📈 Recent Transactions</h2>
-            <table class="data-table">
-                <thead>
-                    <tr>
-                        <th>Time</th>
-                        <th>Items</th>
-                        <th>Total</th>
-                        <th>Payment Method</th>
-                    </tr>
-                </thead>
-                <tbody id="transactionTable"></tbody>
-            </table>
+            <div class="table-container" style="max-height: 400px; overflow-y: auto;">
+                <table class="data-table">
+                    <thead>
+                        <tr>
+                            <th>Time</th>
+                            <th>Items</th>
+                            <th>Total</th>
+                            <th>Payment Method</th>
+                        </tr>
+                    </thead>
+                    <tbody id="transactionTable">
+                        <tr>
+                            <td colspan="4" style="text-align: center; padding: 20px;">No transactions found</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
+
+    <script src="../script.js"></script>
 </body>
 </html>
