--- a/pages/login.html
+++ b/pages/login.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🏪 Mini Mart POS System - Login</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="../script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -16,16 +15,23 @@
             <h2>🔒 Login</h2>
             <form id="loginForm" onsubmit="handleLogin(event)">
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" class="form-control" required>
+                    <label for="username">Email</label>
+                    <input type="email" id="username" class="form-control" value="admin@gmail.com" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" class="form-control" required>
+                    <input type="password" id="password" class="form-control" value="admin123" required>
                 </div>
                 <button type="submit" class="btn">Login</button>
             </form>
+            <div style="margin-top: 20px; padding: 15px; background: rgba(79, 70, 229, 0.1); border-radius: 8px; font-size: 0.9rem;">
+                <strong>Demo Credentials:</strong><br>
+                Email: admin@gmail.com<br>
+                Password: admin123
+            </div>
         </div>
     </div>
+
+    <script src="../script.js"></script>
 </body>
 </html>
