--- a/pages/settings.html
+++ b/pages/settings.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🏪 Mini Mart POS System - Settings</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="../script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -17,6 +16,7 @@
                 <a href="stock.html" class="tab-button">📥 Product in Stock</a>
                 <a href="report.html" class="tab-button">📊 Reports</a>
                 <a href="settings.html" class="tab-button active">⚙️ Settings</a>
+                <button onclick="ApiService.logout()" class="tab-button" style="background: linear-gradient(45deg, #dc2626, #b91c1c);">🚪 Logout</button>
             </div>
         </div>
 
@@ -27,7 +27,7 @@
                     <form id="storeForm" onsubmit="saveStoreSettings(event)">
                         <div class="form-group">
                             <label for="storeName">Store Name</label>
-                            <input type="text" id="storeName" class="form-control">
+                            <input type="text" id="storeName" class="form-control" value="Mini Mart">
                         </div>
                         <div class="form-group">
                             <label for="storeAddress">Address</label>
@@ -35,17 +35,18 @@
                         </div>
                         <div class="form-group">
                             <label for="storePhone">Phone</label>
-                            <input type="tel" id="storePhone" class="form-control">
+                            <input type="tel" id="storePhone" class="form-control" placeholder="(555) 123-4567">
                         </div>
                         <button type="submit" class="btn">Save Settings</button>
                     </form>
                 </div>
+                
                 <div>
                     <h2>💰 Tax & Payment Settings</h2>
                     <form id="paymentForm" onsubmit="updatePaymentSettings(event)">
                         <div class="form-group">
                             <label for="taxRate">Tax Rate (%)</label>
-                            <input type="number" id="taxRate" class="form-control" step="0.01" min="0">
+                            <input type="number" id="taxRate" class="form-control" step="0.01" min="0" max="100" value="0">
                         </div>
                         <div class="form-group">
                             <label for="currency">Currency</label>
@@ -53,17 +54,38 @@
                                 <option value="USD">USD ($)</option>
                                 <option value="EUR">EUR (€)</option>
                                 <option value="GBP">GBP (£)</option>
+                                <option value="CAD">CAD (C$)</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="lowStockAlert">Low Stock Alert</label>
-                            <input type="number" id="lowStockAlert" class="form-control" min="0">
+                            <label for="lowStockAlert">Low Stock Alert Threshold</label>
+                            <input type="number" id="lowStockAlert" class="form-control" min="0" value="10">
                         </div>
                         <button type="submit" class="btn">Update Settings</button>
                     </form>
                 </div>
             </div>
+            
+            <div style="margin-top: 30px; padding: 20px; background: rgba(248, 250, 252, 0.8); border-radius: 12px;">
+                <h2>🔧 API Configuration</h2>
+                <p style="color: #6b7280; margin-bottom: 15px;">Current API endpoint configuration:</p>
+                <div style="background: #f8fafc; padding: 15px; border-radius: 8px; font-family: monospace; font-size: 0.9rem;">
+                    <strong>Base URL:</strong> <span id="currentApiUrl">Loading...</span><br>
+                    <strong>Status:</strong> <span id="apiStatus">Checking...</span>
+                </div>
+                <script>
+                    document.getElementById('currentApiUrl').textContent = API_CONFIG.baseURL;
+                    // Simple API status check
+                    fetch(API_CONFIG.baseURL + '/categories', {
+                        headers: authToken ? { 'Authorization': `Bearer ${authToken}` } : {}
+                    })
+                    .then(() => document.getElementById('apiStatus').innerHTML = '<span style="color: #059669;">✅ Connected</span>')
+                    .catch(() => document.getElementById('apiStatus').innerHTML = '<span style="color: #dc2626;">❌ Not Connected</span>');
+                </script>
+            </div>
         </div>
     </div>
+
+    <script src="../script.js"></script>
 </body>
 </html>
