--- a/pages/stock.html
+++ b/pages/stock.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🏪 Mini Mart POS System - Product in Stock</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="../script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -17,6 +16,7 @@
                 <a href="stock.html" class="tab-button active">📥 Product in Stock</a>
                 <a href="report.html" class="tab-button">📊 Reports</a>
                 <a href="settings.html" class="tab-button">⚙️ Settings</a>
+                <button onclick="ApiService.logout()" class="tab-button" style="background: linear-gradient(45deg, #dc2626, #b91c1c);">🚪 Logout</button>
             </div>
         </div>
 
@@ -24,6 +24,7 @@
             <div class="form-grid">
                 <div>
                     <h2>📥 Add Supplier Product</h2>
+                    <p style="color: #6b7280; margin-bottom: 20px;">Add products purchased from suppliers</p>
                     <form id="stockForm" onsubmit="addStockProduct(event)">
                         <div class="form-group">
                             <label for="stockProductName">Product Name</label>
@@ -35,39 +36,43 @@
                         </div>
                         <div class="form-group">
                             <label for="stockQuantity">Quantity Purchased</label>
-                            <input type="number" id="stockQuantity" class="form-control" min="0" required>
+                            <input type="number" id="stockQuantity" class="form-control" min="1" required>
                         </div>
                         <div class="form-group">
                             <label for="stockCategory">Category</label>
-                            <select id="stockCategory" class="form-control">
-                                <option value="Beverages">Beverages</option>
-                                <option value="Snacks">Snacks</option>
-                                <option value="Dairy">Dairy</option>
-                                <option value="Bakery">Bakery</option>
-                                <option value="Personal Care">Personal Care</option>
-                                <option value="Household">Household</option>
+                            <select id="stockCategory" class="form-control" required>
+                                <option value="">Select category...</option>
                             </select>
                         </div>
                         <button type="submit" class="btn">Add to Stock</button>
                     </form>
                 </div>
+                
                 <div>
                     <h2>📋 Supplier Stock List</h2>
-                    <table class="data-table">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Base Price</th>
-                                <th>Quantity</th>
-                                <th>Category</th>
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody id="stockTable"></tbody>
-                    </table>
+                    <div class="table-container" style="max-height: 500px; overflow-y: auto;">
+                        <table class="data-table">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Base Price</th>
+                                    <th>Quantity</th>
+                                    <th>Category</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="stockTable">
+                                <tr>
+                                    <td colspan="5" style="text-align: center; padding: 20px;">Loading stock...</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="../script.js"></script>
 </body>
 </html>
